force-app/main/default/objects/SSP_Transaction__c/SSP_Transaction__c.object-meta.xml
<CustomObject>
    <description>Object to be used for tracking status of Reverse SSP DC Call outs</description>
    <label>SSP Transaction</label>
    <nameField>
        <displayFormat>TD-{0}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SSP Transaction</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>