force-app/main/default/objects/SSP_Transaction__c/fields/AnnualizedIncome__c.field-meta.xml
<CustomField>
    <fullName>AnnualizedIncome__c</fullName>
    <description>Stores the employee Annual Imcome coming from VCI</description>
    <label>AnnualizedIncome</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>