force-app/main/default/objects/SSP_Transaction__c/fields/ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationId__c</fullName>
    <description>It will store the Application Id or Application Number details.</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Application Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>