force-app/main/default/objects/SSP_Transaction__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <description>Stores the Birthdate coming from VCI</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BirthDate</label>
    <type>Date</type>
</CustomField>