force-app/main/default/objects/SSP_Transaction__c/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <description>It will store the Case Number Details</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>CaseNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>