force-app/main/default/objects/SSP_Transaction__c/fields/EmployeeStatusCode__c.field-meta.xml
<CustomField>
    <fullName>EmployeeStatusCode__c</fullName>
    <description>Stores the employee status code coming from VCI</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EmployeeStatusCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>