force-app/main/default/objects/SSP_Transaction__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>To store AssociationEndDate(VCI),  PayPeriodEndDate(VCI) and InsuranceEndDate(NONESI)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>Date</type>
</CustomField>