force-app/main/default/objects/SSP_Transaction__c/fields/IdentificationID__c.field-meta.xml
<CustomField>
    <fullName>IdentificationID__c</fullName>
    <description>Stores the employer organizantion id coming from VCI and OrganizationCode coming from NONESI</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IdentificationID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>