force-app/main/default/objects/SSP_Transaction__c/fields/IncomeAmount__c.field-meta.xml
<CustomField>
    <fullName>IncomeAmount__c</fullName>
    <description>Stores the employee imcome for a given period that is coming from VCI</description>
    <label>Income Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>