force-app/main/default/objects/SSP_Transaction__c/fields/IndividualId__c.field-meta.xml
<CustomField>
    <fullName>IndividualId__c</fullName>
    <description>It will store the Individual Id</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Individual Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>