force-app/main/default/objects/SSP_Transaction__c/fields/InsuranceEndDateSpecified__c.field-meta.xml
<CustomField>
    <fullName>InsuranceEndDateSpecified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores the InsuranceEndDateSpecified  coming from NONESI</description>
    <label>InsuranceEndDateSpecified</label>
    <type>Checkbox</type>
</CustomField>