force-app/main/default/objects/SSP_Transaction__c/fields/InterfaceName__c.field-meta.xml
<CustomField>
    <fullName>InterfaceName__c</fullName>
    <description>Stores the  the interface name for which this record got created</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Interface Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>