force-app/main/default/objects/SSP_Transaction__c/fields/Log_Message__c.field-meta.xml
<CustomField>
    <fullName>Log_Message__c</fullName>
    <description>Capture the log Message Record Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Log Message</label>
    <length>50</length>
    <type>Text</type>
</CustomField>