force-app/main/default/objects/SSP_Transaction__c/fields/MapOfInputParams__c.field-meta.xml
<CustomField>
    <fullName>MapOfInputParams__c</fullName>
    <description>It will store the mapInputParams for the request as a serialized JSON</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MapOfInputParams</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>