force-app/main/default/objects/SSP_Transaction__c/fields/MECVerificationCode__c.field-meta.xml
<CustomField>
    <fullName>MECVerificationCode__c</fullName>
    <description>Stores the verification code coming from NONESI</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MECVerificationCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>