force-app/main/default/objects/SSP_Transaction__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>It will store the Mode of the Transaction</description>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>RAC</fullName>
                
                
                    <label>RAC</label>
                
                </value>
            
                <value>
                
                    <fullName>Recert</fullName>
                
                
                    <label>Recert</label>
                
                </value>
            
                <value>
                
                    <fullName>Intake</fullName>
                
                
                    <label>Intake</label>
                
                </value>
            
                <value>
                
                    <fullName>Other</fullName>
                
                
                    <label>Other</label>
                
                </value>
            
                <value>
                
                    <fullName>Renewal</fullName>
                
                
                    <label>Renewal</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>