force-app/main/default/objects/SSP_Transaction__c/fields/No_of_Retry__c.field-meta.xml
<CustomField>
    <fullName>No_of_Retry__c</fullName>
    <description>Tells the total count of retry made</description>
    <label>No Of Retry</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>