force-app/main/default/objects/SSP_Transaction__c/fields/OrganizationName__c.field-meta.xml
<CustomField>
    <fullName>OrganizationName__c</fullName>
    <description>Stores the employer organizantion name coming from VCI</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OrganizationName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>