force-app/main/default/objects/SSP_Transaction__c/fields/PayPeriodFrequencyCode__c.field-meta.xml
<CustomField>
    <fullName>PayPeriodFrequencyCode__c</fullName>
    <description>Stores the employee pay frequency coming from VCI</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PayPeriodFrequencyCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>