force-app/main/default/objects/SSP_Transaction__c/fields/PersonGivenName__c.field-meta.xml
<CustomField>
    <fullName>PersonGivenName__c</fullName>
    <description>Stores the first name of an individual coming from VCI</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PersonGivenName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>