force-app/main/default/objects/SSP_Transaction__c/fields/PersonMiddleName__c.field-meta.xml
<CustomField>
    <fullName>PersonMiddleName__c</fullName>
    <description>Stores the middle name of an individual coming from VCI</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PersonMiddleName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>