force-app/main/default/objects/SSP_Transaction__c/fields/PersonSurName__c.field-meta.xml
<CustomField>
    <fullName>PersonSurName__c</fullName>
    <description>Stores the last name of an individual coming from VCI</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PersonSurName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>