force-app/main/default/objects/SSP_Transaction__c/fields/Response_Data__c.field-meta.xml
<CustomField>
    <fullName>Response_Data__c</fullName>
    <description>To capture the response data coming from Reverse SSP DC Integration Service</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>