force-app/main/default/objects/SSP_Transaction__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description>Stores the SSN of an individual coming from VCI</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SSN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>