force-app/main/default/objects/SSP_Transaction__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>To store AssociationBeginDate(VCI) and InsuranceEffectiveDate(NONESI)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>