force-app/main/default/objects/SSP_Transaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Stores the subtag name of the interface response body</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>