force-app/main/default/objects/SSP_Transaction__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>It will store the Unique Id of the Transaction</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>