force-app/main/default/objects/SSP_Transaction__c/fields/View_Name__c.field-meta.xml
<CustomField>
    <fullName>View_Name__c</fullName>
    <description>It will store the View Name of the Transaction</description>
    <encryptionScheme>None</encryptionScheme>
    <label>View Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>